added: profile management html update-profile html update_profile users
didnt integrate change password, logout options.
will be integrated after we are done with database.

--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -16,6 +16,7 @@
         <a href="{{ url_for('edit_user_role') }}" class="block text-gray-700 hover:text-blue-500">Edit User Roles</a>
         <a href="{{ url_for('add_admin') }}" class="block text-gray-700 hover:text-blue-500">Add New Admin</a>
         <a href="{{ url_for('delete_users') }}" class="block text-gray-700 hover:text-blue-500">Delete Users</a>
+        <a href="{{ url_for('profile_management') }}" class="block text-gray-700 hover:text-blue-500">Profile Management</a> 
         <a href="#" class="block text-gray-700 hover:text-blue-500">Poultry Stock</a>
         <a href="#" class="block text-gray-700 hover:text-blue-500">Vaccination Schedule</a>
         <a href="#" class="block text-gray-700 hover:text-blue-500">Production Records</a>
