--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
           <li class="nav-item"><a class="nav-link text-light" href="#">Contact</a></li>
           {% if 'user_email' in session %}
           <li class="nav-item">
-              <a class="nav-link text-light" href="#">Welcome, {{ users[session['user_email']]['name'] }}</a>
+              <a class="nav-link text-light" href="#">Welcome, {{ user.name }}</a>
           </li>
           <li class="nav-item">
               <a class="nav-link text-light" href="{{ url_for('logout') }}">Logout</a>
