--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -33,6 +33,12 @@
           Generate Receipts
         </a>
         
+
+        <a href="{{ url_for('manage_orders') }}" class="block text-gray-700 hover:text-blue-500">
+          Manage Orders
+        </a>
+        
+        
         
         
         <a href="#" class="block text-gray-700 hover:text-blue-500">Notifications</a>
