--- a/templates/index.html
+++ b/templates/index.html
@@ -14,23 +14,27 @@
       <nav>
         <ul class="nav">
           <li class="nav-item"><a class="nav-link text-light" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link text-light" href="#">Products</a></li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="{{ url_for('shop') }}">Products</a></li>
           <li class="nav-item"><a class="nav-link text-light" href="#">Our Story</a></li>
           <li class="nav-item"><a class="nav-link text-light" href="#">About Us</a></li>
           <li class="nav-item"><a class="nav-link text-light" href="#">Contact</a></li>
-          {% if 'user_email' in session %}
+          {% if user and user.role == 'customer' %}
           <li class="nav-item">
-              <a class="nav-link text-light" href="#">Welcome, {{ user.name }}</a>
+            <a class="nav-link text-light" href="{{ url_for('customer_dashboard') }}">My Account</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link text-light" href="{{ url_for('logout') }}">Logout</a>
+            <a class="nav-link text-light" href="#">Welcome, {{ user.name }}</a>
           </li>
-          {% else %}
           <li class="nav-item">
-              <a class="nav-link text-light" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-link text-light" href="{{ url_for('logout') }}">Logout</a>
           </li>
-          {% endif %}
-          
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link text-light" href="{{ url_for('login') }}">Login</a>
+          </li>
+        {% endif %}
+                  
 
         </ul>
       </nav>
