--- a/templates/manager-dashboard.html
+++ b/templates/manager-dashboard.html
@@ -18,9 +18,10 @@
         </a>
         <a href="{{ url_for('poultry_stock') }}" class="block text-gray-700 hover:text-green-500">Poultry Stock</a>
         <a href="{{ url_for('add_product') }}" class="block text-gray-700 hover:text-green-500">Add Product</a>
-        <a href="{{ url_for('vaccination_schedule') }}" class="block text-gray-700 hover:text-green-500">Vaccination Schedule</a>
+        <a href="{{ url_for('manage_vaccinations') }}" class="block text-gray-700 hover:text-green-500">Vaccination Schedule</a>
         <a href="{{ url_for('production_record') }}" class="block text-gray-700 hover:text-green-500">Production Records</a>
         <a href="{{ url_for('feed_resources') }}" class="block text-gray-700 hover:text-green-500">Feed & Resources</a>
+        <a href="{{ url_for('feed_schedule_manager') }}" class="block text-gray-700 hover:text-green-500">Feed Schedule</a>
         <a href="{{ url_for('notifications') }}" class="block text-gray-700 hover:text-green-500">Notifications</a>
         <a href="{{ url_for('orders') }}" class="block text-gray-700 hover:text-green-500">Track Order</a>
         <a href="{{ url_for('manage_orders') }}" class="block text-gray-700 hover:text-blue-500">
